--- a/Rx.NET/Source/System.Reactive.Providers/System.Reactive.Providers.csproj
+++ b/Rx.NET/Source/System.Reactive.Providers/System.Reactive.Providers.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="InternalsVisibleTo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reactive\Internal\Constants.cs" />
     <Compile Include="Reactive\Joins\QueryablePattern.cs" />
